# 2023-kmk

./: .gitignore  README.md
pid-be/: .firebaserc  firebase.json  pyproject.toml
pid-be/app/: config.py  main.py
pid-be/app/helpers/: MetricParserHelper.py
pid-be/app/models/entities/: Admin.py  Analysis.py  Auth.py  (+9 more)
pid-be/app/routers/: admin.py  admins.py  analysis.py  appointments.py  bloodTypes.py  dashboards.py  genders.py  physicians.py  records.py  specialties.py  users.py
pid-be/credentials/: client.json  pid-kmk-firebase-adminsdk-bwvix-1b5972579a.json
pid-be/tests/: config.py  mock_firestore.py  test_add_score.py  test_analysis_upload.py  test_appointments.py  test_approve_physicians.py  test_change_password.py  test_delete_analysis.py  test_delete_appointments.py  test_deny_physicians.py  test_get_analysis.py  test_get_appointments.py  test_get_denied_physicians.py  test_get_pending_validations.py  test_get_physicians_by_specialty.py  test_get_specialties.py  test_get_user_role.py  test_get_working_physicians.py  test_is_logged_in.py  test_login.py  test_patient_blocked_use_of_platform.py  test_pid_be.py  test_post_appointments.py  test_register.py  test_register_admin.py  test_unblock_physicians.py  test_update_appointment.py  test_update_physicians_agenda.py  test_update_specialties.py  test_validate_physicians.py
pid-notifications-api/: pyproject.toml
pid-notifications-api/app/: main.py
pid-notifications-api/app/routers/: emails.py
pid-notifications-api/tests/: test_email_notifications.py  test_notifications.py  test_pid_notifications_api.py
(+247 files in other folders)
